2011-09-25 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKBoxingUtils.h
	* Source/DKBoxingUtils.m
	* Source/DKArgument.m
	* Source/DKMethod.m:
	Implement conversion between primitive types.

2011-09-24 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKMethod.m
	* Source/DKPropertyMethod.m:
	Fix generation of declarations for property accessors/mutators.

2011-09-24 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/UsingDBus.texi: Updated information about runtime
	interaction.

2011-09-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/UsingDBus.texi: Document file descriptor support.

2011-09-21 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKBoxingUtils.m
	* Source/DKArgument.m:
	Add support for boxing DBUS_TYPE_UNIX_FD as NSFileHandle.

2011-09-21 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKBoxingUtils.m: Implement more type information extraction.
	* Source/type_encoding_cases.h: Import from libobjc2
	* Documentation/readme.texi: Mention MIT licensed file from libobjc2
	* Tests/TestDKArgument.m: Add some tests for the new type info functions.
	* README: Regenerate

	More preliminaries for type conversion improvements.

2011-09-20 Niels Grewe <niels.grewe@halbordnung.de>

        * Source/DKBoxingUtils.h
        * Source/DKBoxingUtils.m:
	Factor out some type conversion logic.
	* Source/DKMethod.h
        * Source/DKArgument.h
        * Source/DKMethod.m
        * Source/DKArgument.m
        * Source/DKPropertyMethod.m
        * Source/GNUmakefile:
	Follow-Up changes for DKBoxingUtils.

2011-09-09 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.h
	* Source/DKArgument.m
	* Source/DKIntrospectionNode.h
	* Source/DKIntrospectionNode.m:
	Little work on emitting introspection data.
	* Source/DKObjectPathNode.m
	* Source/DKPortNameServer.m
	* Source/DKPort.m
	* Source/DKNotificationCenter.m
	* Tests/TestDKArgument.m:
	Un-bitrot and fix warnings spotted by clang.

	Small maintenance changes.
